--- a/src/app/elite/elite-venue/elite-venue.component.scss
+++ b/src/app/elite/elite-venue/elite-venue.component.scss
@@ -275,11 +275,11 @@
         }
 
         .menu {
-            height: 90%;
+            // height: 60%;
             overflow-x: hidden;
             overflow-y: scroll;
             position: absolute;
-            top: 146px;
+            top: 170px;
             background-color: rgb(0 0 0 / 88%);
         }
 
